# hyprlandDotfiles

./: README.md
.config/fish/: config.fish  fish_plugins  fish_variables  fishd.tmp.7o6XjI  fishd.tmp.Jvlj86
.config/fish/functions/: check.fish
.config/hypr/: hyprland.conf  hyprlock.conf
.config/hypr/UserConfigs/: ENVariables.conf  (+6 more)
.config/kitty/: kitty-colors.conf  kitty.conf  kitty.conf.bak
.config/neofetch/: customfetch.sh
.config/nvim/: .stylua.toml  init.lua  lazy-lock.json
.config/rofi/: .current_wallpaper
.config/swaync/: config.json  style.css
.config/tmux/: statusline.conf  theme.conf  tmux.conf
.config/waybar/: config  style.css
.config/wlogout/: style.css
competitiveProgramming/cf_tool/: Cargo.toml
competitiveProgramming/cf_tool/data/: saved_links.txt  workspace  workspace.cpp
competitiveProgramming/cf_tool/src/: main.rs  utils.rs
competitiveProgramming/cf_tool/src/commands/: add.rs  check.rs  contest.rs  friends.rs  last.rs  load.rs  mod.rs  submit.rs
competitiveProgramming/contest/: README.md  cf.py  data.html  extractHtml.py  run.sh  samples.py  saved_links.txt  test.js  workspace  workspace.cpp
competitiveProgramming/cp_tool/: cc_contest.py  cf_contest.py  rating.py  testing.py
competitiveProgramming/editor/: Cargo.toml  cf.go  cf.py  cf.sh  cpBu.py  go.mod  main.rs  run.sh  saved_links.txt  testing.py  workspace  workspace.cpp
competitiveProgramming/editor/myenv/: pyvenv.cfg
competitiveProgramming/editor/src/: main.rs
competitiveProgramming/manual/: cf.py  data.html  run.sh  saved_links.txt  workspace  workspace.cpp
(+20 files in other folders)
