[package]
name = "cf_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18.1"
clipboard = "0.5.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
