[package]
name = "cf-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12"
regex = "1.5"
serde_json = "1.0"
copypasta = "0.8"
webbrowser = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
